--- a/ReveModels/ReveModels.csproj
+++ b/ReveModels/ReveModels.csproj
@@ -45,6 +45,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ResultModel.cs" />
     <Compile Include="RMCustomer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
