--- a/ReveApplication/ReveApplication.csproj
+++ b/ReveApplication/ReveApplication.csproj
@@ -43,6 +43,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="AutoMapper, Version=8.1.0.0, Culture=neutral, PublicKeyToken=be96cd2c38ef1005, processorArchitecture=MSIL">
+      <HintPath>..\packages\AutoMapper.8.1.0\lib\net461\AutoMapper.dll</HintPath>
+    </Reference>
     <Reference Include="EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
       <HintPath>..\packages\EntityFramework.6.2.0\lib\net45\EntityFramework.dll</HintPath>
     </Reference>
@@ -91,6 +94,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="App_Start\WebApiConfig.cs" />
+    <Compile Include="Controllers\BaseController.cs" />
     <Compile Include="Controllers\CustomerController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
@@ -111,6 +115,10 @@
     <Folder Include="Models\" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\ReveBusinessLogic\ReveBusinessLogic.csproj">
+      <Project>{46c1cc11-4d88-427a-b6e5-8b574f6b9950}</Project>
+      <Name>ReveBusinessLogic</Name>
+    </ProjectReference>
     <ProjectReference Include="..\ReveEFAccess\ReveEFAccess.csproj">
       <Project>{7D4F6119-728E-47DC-B278-8704B9B949A6}</Project>
       <Name>ReveEFAccess</Name>
