--- a/ReveEFAccess/App.Config
+++ b/ReveEFAccess/App.Config
@@ -5,7 +5,7 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="revedatabaseEntities" connectionString="metadata=res://*/SalesLT.csdl|res://*/SalesLT.ssdl|res://*/SalesLT.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=revesqlserver.database.windows.net;initial catalog=revedatabase;persist security info=True;user id=reve0121@revesqlserver;password=GAOWEI19951017gf..;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="revedatabase" connectionString="metadata=res://*/SalesLT.csdl|res://*/SalesLT.ssdl|res://*/SalesLT.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=revesqlserver.database.windows.net;initial catalog=revedatabase;persist security info=True;user id=reve0121@revesqlserver;password=GAOWEI19951017gf..;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
